[tool.poetry]
name = "okx-perp-reliable"
version = "0.1.0a1"
description = "Reliable asyncio SDK for OKX USDT-margined perpetual swap REST order placement."
authors = ["Alan <alan@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "okx_perp_reliable", from = "src" }]
keywords = [
    "okx",
    "perpetual",
    "futures",
    "trading",
    "async",
    "asyncio",
    "reconciliation",
    "idempotency",
    "crypto",
]
homepage = "https://github.com/alanships/alan-quant-lab"
repository = "https://github.com/alanships/alan-quant-lab"
documentation = "https://github.com/alanships/alan-quant-lab/blob/main/docs/why.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: AsyncIO",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
aiohttp = "^3.9.0"
pydantic = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
ruff = "^0.4.0"
black = "^24.0.0"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]

[tool.pytest.ini_options]
testpaths = ["tests"]
